discussion/kv_engine/177006/177006_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

[serverless] Add Dcp throttling and metering test

Add unit tests to verify that Throttling and Metering works
over DCP

Change-Id: Iab9d25c980d7d115d2783ba485177cafda652381

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 12:22:56.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 12:30:21.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47310/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47310/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39762/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39762/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8221/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8221/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8320/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8320/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20434/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20434/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20782/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20782/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21422/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21422/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28815/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28815/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19656/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19656/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18550/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9: error: use of undeclared identifier "EXPECT_TRUE" [clang-diagnostic-error]
        EXPECT_TRUE(rsp.isSuccess()) << rsp.getStatus();
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13: error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18550/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/dcp_drain.cc:187:9:
error: use of undeclared identifier "EXPECT_TRUE" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18550/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17701/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
